Fix wrapping bug with splitbutton
- that was introduced with last commit
- now splitbutton stays on one single line AND its button
  always aligns to middle, regardless of the whole height

--- a/pub/static/themes/whitelabel/components/dropdown/_mixins.base.scss
+++ b/pub/static/themes/whitelabel/components/dropdown/_mixins.base.scss
@@ -85,6 +85,7 @@ $dropdown-toggle-width: 1em;
 
 @mixin base-splitbutton($name: "splitbutton-normal") {
     @include base-dropdown($name);
+    display: inline-flex; // inline-block doesn't keep splitbutton on a single line
     white-space: nowrap;
 
     @include media-query(palm) {
