--- a/pub/static/themes/whitelabel/views/default/collection/_collection-controls.scss
+++ b/pub/static/themes/whitelabel/views/default/collection/_collection-controls.scss
@@ -34,10 +34,6 @@
             top: 50%;
             transform: translateY(-50%);
         }
-
-        > * {
-            display: inline-block;
-        }
     }
 
     .pager__description {
